--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ Section Description: This section contains the main menu for the single page web
   <!-- Insert your Website Title in the link content below -->    
   <a class="item" href="#home"> www.Salior moon carystal.com</a>
   <!-- Change the text of the link content below -->
-  <a class="item" href="#section-one">Change this content</a>
+  <a class="item" href="#section-one"> 5 prety guardians </a>
   <!-- Change the text of the link content below -->
-  <a class="item" href="#section-two">Change this content</a>
+  <a class="item" href="#section-two">protects the world in peace</a>
   <a class="item" href="#media">Media</a>
   <!-- Add your own name in the link content below -->    
-  <a class="item" href="#about">About <!-- Add Name --></a>
+  <a class="item" href="#about">About Bao-chau</a>
     
   <div class="right menu">
     <ul>
@@ -89,15 +89,15 @@ Header Instructions
   <div class="ui one column page grid">
       <div class="column center aligned">
         <!-- Step 1. Change the text of the h1 heading content below to the name of your website. -->
-        <h1 class="ui header huge white">Insert the name of your website</h1>
+        <h1 class="ui header huge white">Saliormoon carystal</h1>
         <!-- Step 2. Change the text of the p content below to be about your website.-->
-        <p class="ui header small white">Write your first paragaph about your website.</p>
+        <p class="ui header small white">5 prety guardians</p>
         <!-- Step 3. Change the text of the p content below to be about your website.-->
-        <p class="ui header small white">Write your second paragraph about your website.</p>
+        <p class="ui header small white">protects the wrold in peace</p>
         <!-- Step 4. Change the text of the button below to something you like -->
-        <a href="" class="ui button">Button One</a>
+        <a href="http://www.sailormoon.com/" class="ui button">click here</a>
         <!-- Step 5. Change the text of the button below to something you like -->
-        <a href="" class="ui button">Button Two</a>
+        <a href="http://www.watchsailormoon.com/" class="ui button">Welcome</a>
       </div>
   </div>
 </header>
