--- a/index.html
+++ b/index.html
@@ -114,29 +114,29 @@ Section One Instructions
 <section id="section-one">
   <div class="ui one column page grid">
     <!-- Step 1. Change the h1 heading below to heading of your choosing. -->
-    <h1 class="ui center aligned header"><!-- Insert your own code here -->This is the section one header</h1>  
+    <h1 class="ui center aligned header"><!-- Insert your own code here -->5 prety guardians</h1>  
   </div>
   <div class="ui two column page grid">
     <div class="column">
       <div class="ui segment center aligned">
-        <h1 class="ui large header">This is a sample header</h1>
-        <p>This is the first paragraph about your website topic.</p>
+        <h1 class="ui large header">salior mars</h1>
+        <p>salior mars guardian of war.</p>
         <i class="uk-icon-button icon star large"></i>
       </div>  
       <div class="ui segment center aligned">
-        <h1 class="ui large header uk-align-left">This is a sample header</h1>
-        <p class="uk-align-left">This is the first paragraph about your website topic.</p>
+        <h1 class="ui large header uk-align-left">salior venus guardian of love and beauty.</h1>
+        <p class="uk-align-left">.</p>
         <i class="uk-icon-button icon star large"></i>
       </div> 
     </div> 
     <div class="column">
       <div class="ui segment center aligned">
-        <h1 class="ui large header">This is a sample header</h1>
+        <h1 class="ui large header">salior mercury guardian of romace</h1>
         <p>This is the first paragraph about your website topic.</p>
         <i class="uk-icon-button icon star large"></i>
       </div>  
       <div class="ui segment center aligned">
-        <h1 class="ui large header">This is a sample header</h1>
+        <h1 class="ui large header"></h1>
         <p>This is the first paragraph about your website topic.</p>
         <i class="uk-icon-button icon star large"></i>
       </div>
