--- a/index.html
+++ b/index.html
@@ -124,20 +124,20 @@ Section One Instructions
         <i class="uk-icon-button icon star large"></i>
       </div>  
       <div class="ui segment center aligned">
-        <h1 class="ui large header uk-align-left">salior venus guardian of love and beauty.</h1>
-        <p class="uk-align-left">.</p>
+        <h1 class="ui large header uk-align-left">salior venus </h1>
+        <p class="uk-align-left">guardian of love and beauty.</p>
         <i class="uk-icon-button icon star large"></i>
       </div> 
     </div> 
     <div class="column">
       <div class="ui segment center aligned">
-        <h1 class="ui large header">salior mercury guardian of romace</h1>
-        <p>This is the first paragraph about your website topic.</p>
+        <h1 class="ui large header">salior mercury </h1>
+        <p>guardian of romace</p>
         <i class="uk-icon-button icon star large"></i>
       </div>  
       <div class="ui segment center aligned">
-        <h1 class="ui large header"></h1>
-        <p>This is the first paragraph about your website topic.</p>
+        <h1 class="ui large header">salior moon </h1>
+        <p>priencess of the moon.</p>
         <i class="uk-icon-button icon star large"></i>
       </div>
       </div>
