--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Section Two Instructions
     <div class="column">
       <div class="ui segment center aligned">
         <h3 class="ui header"><!-- Insert your own code here -->This is a sample header</h3>
-        <img src="http://placehold.it/240x240">  
+        <img src="http://4e7221.medialib.glogster.com/media/09cbf671ce03777e57b303bc6d29272f3c6b58f66dc9241486ff1f08a39539b0/sailor-mars.jpg"/>  
         <p>This paragraph should describe link #2</p>
         <a class="ui button orange">Link #2</a>
       </div>
