--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ Section One Instructions
   <div class="ui two column page grid">
     <div class="column">
       <div class="ui segment center aligned">
-        <h1 class="ui large header">salior mars</h1>
+        <h1 class="ui header">salior mars</h1>
         <p>salior mars guardian of war.</p>
-        <i class="uk-icon-button icon star large"></i>
+        <img class="ui medium image" src="http://farm6.static.flickr.com/5534/14058855193_94f82d0876_m.jpg">
       </div>  
       <div class="ui segment center aligned">
         <h1 class="ui large header uk-align-left">salior venus </h1>
