--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Step 6. Past the embed video code
     </div>  
     <div class="column">
         <!-- PASTE VIDEO TWO EMBED CODE BELOW THIS LINE -->
-        <iframe width="490" height="276" src="//www.youtube.com/embed/I4Peyhk7ZS8" frameborder="0" allowfullscreen></iframe>
+        <iframe width="490" height="276" src="//www.youtube.com/embed/2bBUJqeSEak" frameborder="0" allowfullscreen></iframe>
       </div>
   </div>
 </section>
