--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Step 6. Past the embed video code
     
 <section id="media">
   <div class="ui one colum page grid">
-    <h1 class="ui center aligned header">These are some <span style="text-decoration: underline;">INSERT WORD</span> videos about <span style="text-decoration: underline;">INSERT WORD</span></h1>  
+    <h1 class="ui center aligned header">These are some <span style="text-decoration: underline;">salior moon crystal</span></span> videos about <span style="text-decoration: underline;">INSERT WORD</span></h1>  
   </div>
   <div class="ui two column stackable page grid">
     <div class="column">
